# conta_con

./: Consolidado.csv  Consolidado.xlsx  atribuicao.py  custas.csv  etl_contadoria.py  liquidacao.csv  meta.csv  meta_atualizada.csv  meta_atualizada.xlsx  processos_filtrados.xlsx  pyproject.toml  teste.py  testes_baixar.py  token.json
data_transform/: Consolidado.csv  Consolidado.xlsx  final_tempo_real.xlsx
